--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-html-toc",
   "description": "Gulp plugin for html-toc, for generating a HTML table of contents.",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "homepage": "https://github.com/jonschlinkert/gulp-html-toc",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
   "repository": "jonschlinkert/gulp-html-toc",
@@ -32,6 +32,8 @@
   "keywords": [
     "gulp",
     "gulpplugin",
+    "table-of-contents",
+    "html-toc",
     "html",
     "toc"
   ],
