--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "main": "index.js",
   "engines": {
-    "node": ">=4"
+    "node": ">=0.10.0"
   },
   "scripts": {
     "test": "mocha"
@@ -32,9 +32,9 @@
   "keywords": [
     "gulp",
     "gulpplugin",
-    "table-of-contents",
-    "html-toc",
     "html",
+    "html-toc",
+    "table-of-contents",
     "toc"
   ],
   "verb": {
@@ -48,9 +48,9 @@
     ],
     "related": {
       "list": [
-        "html-toc",
+        "gulp-htmlmin",
         "gulp-prettify",
-        "gulp-htmlmin"
+        "html-toc"
       ]
     },
     "lint": {
